# p2p_ros

./: .gitignore  LICENSE  README.md  package.xml  platform.json  requirements.txt  setup.cfg  setup.py
p2p_ros/: publisher_member_function.py  subscriber_member_function.py
p2p_ros/p2p/data/: __init__.py
p2p_ros/p2p/models/: __init__.py  base_model.py
p2p_ros/p2p/options/: base_options.py
p2p_ros/p2p/weights/ndvi_p2p/: test_opt.txt
